--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ Flask-Login==0.3.2
 Flask-Mail>=0.7.3
 Flask-Principal>=0.3.3
 Flask-WTF>=0.13
+pymongo==2.8.0
 itsdangerous>=0.17
 passlib>=1.6.4
 mongoengine==0.10.1
 flask-mongoengine==0.7.1
+werkzeug==0.12.1
 
