--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask==0.12
-Flask-Login==0.3.2
-Flask-Mail>=0.7.3
-Flask-Principal>=0.3.3
-Flask-WTF>=0.13
-pymongo==2.8.0
-itsdangerous>=0.17
-passlib>=1.6.4
-mongoengine==0.10.1
-flask-mongoengine==0.7.1
-werkzeug==0.12.1
+# Flask==0.12
+# Flask-Login==0.3.2
+# flask_mail==0.9.1
+# Flask-Principal>=0.3.3
+# Flask-WTF>=0.13
+# pymongo==2.8.0
+# itsdangerous>=0.17
+# passlib>=1.6.4
+# mongoengine==0.10.1
+# flask-mongoengine==0.7.1
+# werkzeug==0.12.1
 
